--- a/example.env
+++ b/example.env
@@ -20,19 +20,19 @@ SUDO_USERS=1757169682 1670523611 1727937540
 DURATION_LIMIT=240 
 
 # if you have channel, fill the channel username here without @
-UPDATES_CHANNEL=levinachannel
+UPDATES_CHANNEL=Team_Bot_Update
 
 # # if you have group, fill the group username here without @
-GROUP_SUPPORT=VeezSupportGroup
+GROUP_SUPPORT=Team_Bot_Support
 
 # fill with username of your telegram account
-OWNER_USERNAME=dlwrml
+OWNER_USERNAME=Official_pro_xd
 
 # fill with your own telegram id
 OWNER_ID= 
 
 # fill with nickname/name of your telegram account
-ALIVE_NAME=Levina
+ALIVE_NAME=Blaze
 
 # fill with the mongodb url you created from cloud.mongodb.com
 MONGODB_URL=
