--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "ᗷʟᴀᴢᴇ x Music Stream Bot",
     "description": "Telegram bot for Streaming Video & Music trought the Telegram Group Video Chat, powered by PyTgCalls and Pyrogram",
-    "logo": "https://telegra.ph/file/801559bf28263804fd590.png",
+    "logo": "https://telegra.ph/file/801559bf28263804fd590.jpg",
     "keywords": [
         "py-tgcalls",
         "telegram bot",
